--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "sharp": "^0.32.6",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "daisyui": "^3.9.3",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8",
     "tailwindcss": "^3"
   }
