--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-photo-view": "^1.2.3",
     "sharp": "^0.32.6",
     "swiper": "^11.0.3"
   },
