--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-photo-view": "^1.2.3",
+    "react-slick": "^0.30.2",
     "sharp": "^0.32.6",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
